# sqlcheck

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
sqlcheck/: cli.py  db_connector.py  execution.py  function_registry.py  functions.py  models.py  parser.py  reports.py  runner.py
sqlcheck/adapters/: base.py  duckdb.py  snowflake.py  sqlalchemy.py
sqlcheck/cli/: common.py  connections.py
sqlcheck/connectors/: __init__.py  sqlalchemy.py
sqlcheck/functions/: __init__.py  assess.py  fail.py  registry.py  success.py
tests/: test_cli.py  test_duckdb_integration.py  test_multi_segment.py  test_parser.py  test_reports.py  test_runner.py  test_sqlalchemy_adapter.py  test_sqlalchemy_integration.py
tests/fixtures/: assess_check_comparisons.sql  assess_check_complex.sql  assess_check_regex.sql  assess_error_match.sql  assess_output_match.sql  assess_result_cells.sql  assess_result_cells_two.sql  assess_stdout_stderr.sql  basic.sqltest  failure_basic.sql  failure_missing_table.sql  multi_segment_success.sql  success_basic.sql  success_cte.sql  success_joins.sql  success_window.sql
tests/fixtures_false_positives/: assess_arithmetic_mismatch.sql  assess_first_row_mismatch.sql  assess_first_row_range_mismatch.sql  assess_multi_column_mismatch.sql  assess_output_rows_mismatch.sql  assess_row_count_mismatch.sql  assess_second_row_mismatch.sql  assess_sql_text_mismatch.sql  assess_statement_count_mismatch.sql  assess_status_mismatch.sql  assess_string_cast_mismatch.sql  expect_fail_but_succeed.sql  expect_success_but_fail.sql  (+1 more)
(+5 files in other folders)
