[project]
name = "sqlcheck"
version = "0.1.0"
description = "CLI for SQL test validation"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "duckdb",
  "pytest>=8.0.0",
]

[project.scripts]
sqlcheck = "sqlcheck.cli:main"

[tool.uv]
package = true
